2005-09-25  Yves Combe  <yves@ycombe.net>

	fix segfault in worsgame (http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=273680). Same bug as in reading (see 2005-11-09).

	* src/boards/wordsgame.c: (get_wordfile):

2005-09-25  Yves Combe  <yves@ycombe.net>

	fix macro name in gletters: plugin was fail starting.

	* src/boards/gletters.c: (gletters_create_item):

2005-09-25  Yves Combe  <yves@ycombe.net>

	pass sounds files from name like y.ogg to U0079.ogg.
	Update assetml.in to.
	Alexey Lubimov fixes the description in russian assetml alphabet file.
	gameutil.c: fix crash when closing dialog with a callback. 
	click_on_letter: fallback to english if locale sound is not here.
	soundutil: add usefull function to get filename  Uxxxx.ogg from letter.
	gcompris: fix compilation error with gcc 4.0 (missing declaration)
	
	* boards/sounds/da/alphabet/1.ogg:
	* boards/sounds/da/alphabet/2.ogg:
	* boards/sounds/da/alphabet/3.ogg:
	* boards/sounds/da/alphabet/4.ogg:
	* boards/sounds/da/alphabet/5.ogg:
	* boards/sounds/da/alphabet/6.ogg:
	* boards/sounds/da/alphabet/7.ogg:
	* boards/sounds/da/alphabet/8.ogg:
	* boards/sounds/da/alphabet/9.ogg:
	* boards/sounds/da/alphabet/U0031.ogg:
	* boards/sounds/da/alphabet/U0032.ogg:
	* boards/sounds/da/alphabet/U0033.ogg:
	* boards/sounds/da/alphabet/U0034.ogg:
	* boards/sounds/da/alphabet/U0035.ogg:
	* boards/sounds/da/alphabet/U0036.ogg:
	* boards/sounds/da/alphabet/U0037.ogg:
	* boards/sounds/da/alphabet/U0038.ogg:
	* boards/sounds/da/alphabet/U0039.ogg:
	* boards/sounds/da/alphabet/U0061.ogg:
	* boards/sounds/da/alphabet/U0062.ogg:
	* boards/sounds/da/alphabet/U0063.ogg:
	* boards/sounds/da/alphabet/U0064.ogg:
	* boards/sounds/da/alphabet/U0065.ogg:
	* boards/sounds/da/alphabet/U0066.ogg:
	* boards/sounds/da/alphabet/U0067.ogg:
	* boards/sounds/da/alphabet/U0068.ogg:
	* boards/sounds/da/alphabet/U0069.ogg:
	* boards/sounds/da/alphabet/U006A.ogg:
	* boards/sounds/da/alphabet/U006B.ogg:
	* boards/sounds/da/alphabet/U006C.ogg: